--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "pug": "^3.0.3",
     "vue": "^3.5.13",
