--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -19,7 +18,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "gh-pages": "^6.3.0",
+    "sass": "^1.84.0",
     "sass-embedded": "^1.83.4",
+    "sass-loader": "^16.0.4",
     "vite": "^6.0.5"
   }
 }
