--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,8 +37,9 @@ jobs:
         run: ls -la ./dist
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
+          name: github-pages
           path: ./dist/
 
   deploy:
@@ -54,3 +55,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+        with:
+          artifact_name: github-pages
