--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           name: github-pages
           path: ./dist/
+          if-no-files-found: error
 
   deploy:
     needs: build
