--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,13 +39,14 @@ jobs:
               run: npm ci
             - name: Build
               run: npm run build && cp ./dist/index.html ./dist/404.html
+            - name: Verify build output
+              run: ls -la ./dist
             - name: Setup Pages
               uses: actions/configure-pages@v4
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  # Upload dist repository
-                  path: "./dist"
+                  path: "${{ github.workspace }}/dist"
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v2
